# video-capture-dx11

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: BUILD_FFMPEG.md
examples/: CMakeLists.txt  WEBRTC_README.md  simple_player.cpp  stream_player.cpp  webrtc_player.cpp  webrtc_sender.html
include/: Logger.h  VideoCapture.h
src/: BufferDataSource.cpp  BufferDataSource.h  FFmpegInitializer.cpp  FFmpegInitializer.h  FileDataSource.cpp  FileDataSource.h  HardwareDecoder.cpp  HardwareDecoder.h  IDataSource.h  Logger.cpp  Logger.h  VideoCapture.cpp  VideoDecoder.cpp  VideoDecoder.h  VideoDemuxer.cpp  VideoDemuxer.h  WebRTCDataSource.cpp  WebRTCDataSource.h
